team70 mobile app api

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 PORT = 3007
+DB_USERNAME = maestrohealth
+DB_PASSWORD = mongopassword2022
+DB_NAME = team70
+SALT_ROUNDS = 10
+EMAIL_USERNAME = maestro.health12@gmail.com
+EMAIL_PASSWORD = ehibkyuvvxqmklny
+SERVICE = gmail
+
+
