--- a/package.json
+++ b/package.json
@@ -18,16 +18,20 @@
     "uuid": "^8.3.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
+    "@types/nodemailer": "^6.4.5",
     "@types/request": "^2.48.8",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.5.1",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.7",
     "request": "^2.88.2",
     "ts-node": "^10.9.1"
   }
