--- a/package.json
+++ b/package.json
@@ -11,11 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.6.4",
-    "@types/uuid": "^8.3.4",
     "nodemon": "^2.0.19",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^4.7.4",
-    "uuid": "^8.3.2"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -33,6 +31,8 @@
     "morgan": "^1.10.0",
     "nodemailer": "^6.7.7",
     "request": "^2.88.2",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "uuid": "^8.3.2",
+    "@types/uuid": "^8.3.4"
   }
 }
